commit of version 1.3.0